@@ -71,7 +71,7 @@ def deprecated(func):
         
     return update_func_meta(newfunc, func)
     
-def time(func):
+def timeit(func):
     """
     This is a decorator which times a function and prints the time it took in
     milliseconds to stdout.
